[나현주] 교육원 header 메뉴 수정, 게시판 경로 지정까지 완료

--- a/lms/src/main/resources/templates/fragments/header.html
+++ b/lms/src/main/resources/templates/fragments/header.html
@@ -36,13 +36,31 @@
 	        <ul class="nav navbar-nav navbar-center">
 	            <li class="nav-item">
 	                <div class="dropdownatuo">
-	                    <button class="dropbtn">#교육원소개
+	                    <button class="dropbtn">#교육원정보
 	                        <i class="fa fa-caret-down"></i>
 	                    </button>
 	                    <div class="dropdownatuo-content">
-	                        <a href="#">#교육원소개1</a>
-	                        <a href="#">#교육원소개2</a>
-	                        <a href="#">#교육원소개3</a>
+	                        <a href="#">#교육원소개</a>
+	                        <a href="#">#원장소개</a>
+	                        <a href="#">#직원/강사소개</a>
+	                        <a href="#">#관련기관</a>
+	                    </div>
+	                </div>
+	            </li>
+	            <li class="nav-item">
+	                <div class="dropdownatuo">
+	                    <button class="dropbtn">#입학안내
+	                        <i class="fa fa-caret-down"></i>
+	                    </button>
+	                    <div class="dropdownatuo-content">
+	                        <a href="#">#교육과정</a>
+	                        <a href="#">#학사일정</a>
+	                        <a href="#">#수강신청안내</a>
+	                        <a href="#">#수강생혜택</a>
+	                        <a href="#">#유의사항</a>
+	                        <a href="#">#환불규정</a>
+	                        <a href="#">#학사관리규정</a>
+	                        <a href="#">#학습과정운영지침</a>
 	                    </div>
 	                </div>
 	            </li>
@@ -53,21 +71,38 @@
 	                    </button>
 	                    <div class="dropdownatuo-content">
 	                    	<a th:href="@{'/PI/lecture/subjectList?institutionCode='+${institutionCode}}">강의/과목 조회</a>
-	                        <a href="#">#강의소개 1</a>
-	                        <a href="#">#강의소개 2</a>
-	                        <a href="#">#강의소개 3</a>
+	                        <a href="#">#강의등록</a>
+	                        <a href="#">#강의자료실</a>
+	                        <a href="#">#전자도서관</a>
 	                    </div>
 	                </div>
 	            </li>
 	            <li class="nav-item">
 	                <div class="dropdownatuo">
-	                    <button class="dropbtn">#자격증소개 
+	                    <button class="dropbtn">고객지원 
 	                        <i class="fa fa-caret-down"></i>
 	                    </button>
 	                    <div class="dropdownatuo-content">
-	                        <a href="#">#자격증소개 1</a>
-	                        <a href="#">#자격증소개 2</a>
-	                        <a href="#">#자격증소개 3</a>
+	                        <a th:href="@{'/PINotice?institutionCode='+${institutionCode}}">공지사항</a>
+	                        <a th:href="@{'/PIBoard?institutionCode='+${institutionCode}}">커뮤니티</a>
+	                        <a th:href="@{'/PIQnA?institutionCode='+${institutionCode}}">Q&A</a>
+	                        <a th:href="@{'/PIFAQ?institutionCode='+${institutionCode}}">자주하는질문</a>
+	                    </div>
+	                </div>
+	            </li>
+	            <li class="nav-item">
+	                <div class="dropdownatuo">
+	                    <button class="dropbtn">마이페이지 
+	                        <i class="fa fa-caret-down"></i>
+	                    </button>
+	                    <div class="dropdownatuo-content">
+	                        <a href="#">#수강정보</a>
+	                        <a href="#">#학습자료실</a>
+	                        <a href="#">#학사종합정보</a>
+	                        <a href="#">#성적관리</a>
+	                        <a href="#">#수료관리</a>
+	                        <a href="#">#1:1상담게시판</a>
+	                        <a th:href="@{'/memberModify?institutionCode='+${institutionCode}}">회원정보수정</a>
 	                    </div>
 	                </div>
 	            </li>
