--- a/lms/src/main/resources/templates/association/institution/addInstitution.html
+++ b/lms/src/main/resources/templates/association/institution/addInstitution.html
@@ -14,8 +14,13 @@
 function DaumPostcode() {
     new daum.Postcode({
         oncomplete: function(data) {
-            // 팝업에서 검색결과 항목을 클릭했을때 실행할 코드를 작성하는 부분입니다.
-            // 예제를 참고하여 다양한 활용법을 확인해 보세요.
+            // 팝업에서 검색결과 항목을 클릭했을때 실행할 코드를 작성하는 부분
+            // 도로명 주소의 노출 규칙에 따라 주소를 표시한다.
+            // 내려오는 변수가 값이 없는 경우엔 공백('')값을 가지므로, 이를 참고하여 분기 한다.
+            var roadAddr = data.roadAddress; // 도로명 주소 변수
+            
+        	document.getElementById('institutionPostcode').value = data.zonecode;
+            document.getElementById("institutionAddress").value = roadAddr;			
         }
     }).open();
 }    
@@ -61,24 +66,23 @@ $(document).ready(function(){
 		     <input type="text" class="form-control" placeholder="ex) 010-1234-1234..." id="institutionPhone" name="institutionPhone">
 		</div>   
 		<div class="form-group">
+			<label>주소 : </label>
 			<div class="row">
 				<div class="col-sm-4">
-					<label>주소 : </label>
-				    <input type="text" class="form-control" placeholder="숫자만 입력 가능합니다.." readonly="" id="institutionPostcode" name="institutionPostcode">
+					<input type="text" class="form-control" placeholder="우편번호 /숫자만 입력 가능합니다.." readonly="readonly" id="institutionPostcode" name="institutionPostcode">
 				</div> 
-				<div class="col-sm-8">
-					<label>주소 : </label>
-					<input type="button" class="btn btn-outline-info" onclick="DaumPostcode()" value="우편번호찾기"><br>
-				</div>
-				
+				<div class="col-sm-8">		
+					<input type="button" class="btn btn-outline-info" onclick="DaumPostcode()" value="주소찾기">
+				</div>				
 			</div>	
-			<div>	
-				<input type="text" class="form-control" placeholder="주소찾기 버튼을 클릭해주세요" id="institutionAddress" name="institutionAddress">
-			</div>
-			<div>
-				<label>상세주소 : </label>
-			    <input type="text" class="form-control" placeholder="상세주소를 입력해주세요" id="institutionAddressDesc" name="institutionAddressDesc">  
-		    </div>  
+			<div class="row">
+				<div class="col-sm-8">	
+					<input type="text" class="form-control" placeholder="도로명주소/주소찾기 버튼을 클릭해주세요" readonly="readonly" id="institutionAddress" name="institutionAddress">
+				</div>
+				<div class="col-sm-4">
+				    <input type="text" class="form-control" placeholder="상세주소를 입력해주세요" id="institutionAddressDesc" name="institutionAddressDesc">  
+			    </div>  
+			</div>	    
 		</div>
 		<div class="form-group">
 		    <label>교육원 위치 : </label>
