--- a/lms/src/main/resources/templates/association/infoAnnualFee/infoAnnualFeeList.html
+++ b/lms/src/main/resources/templates/association/infoAnnualFee/infoAnnualFeeList.html
@@ -59,6 +59,7 @@
 	<table class="table">
 		<thead>
 			<tr>
+				<th>결제 코드</th>
 				<th>교육원 이름</th>
 				<th>환불일</th>
 				<th>환불금액</th>
@@ -66,6 +67,7 @@
 		</thead>
 		<tbody>
 			<tr th:each="refundAnnualList:${refundAnnualList}">
+				<td th:text="${refundAnnualList.paymentAnnualFeeCode}"></td>
 				<td th:text="${refundAnnualList.institutionName}"></td>
 				<td th:text="${refundAnnualList.refundAnnualFeeDate}"></td>
 				<td th:text="${refundAnnualList.refundAnnualFeePrice}"></td>	
