[김기남] 연간 자격 시험 조회 및 등록

--- a/lms/src/main/resources/templates/association/license/addInfoQualification.html
+++ b/lms/src/main/resources/templates/association/license/addInfoQualification.html
@@ -116,7 +116,7 @@
 
 <div layout:fragment="content">
 	<h3>자격증 추가</h3>
-	<form id="addQualification" action="/association/license/addInfoQualification" Use="post">
+	<form id="addQualification" action="/association/license/addInfoQualification" method="post">
 		<div class="form-group">
 			<label>자격종목코드 :</label>
 			<input type="text" class="form-control" id="infoQualificationCode" name="infoQualificationCode">
