--- a/lms/src/main/resources/templates/association/license/addLicenseTestLocation.html
+++ b/lms/src/main/resources/templates/association/license/addLicenseTestLocation.html
@@ -162,7 +162,7 @@
 		</div>
 		<div class="form-group"></div>
 			<label>주소 :</label>				
-			<input type="text" length=20 id="licenseTestLocationAddress" name="licenseTestLocationAddress" placeholder="주소">
+			<input type="text" id="licenseTestLocationAddress" name="licenseTestLocationAddress" placeholder="주소">
 			<input type="button" onclick="sample5_execDaumPostcode()" value="주소 검색"><br>
 			<input type="text" id="licenseTestLocationAddressDetail" name="licenseTestLocationAddressDetail" placeholder="상세주소">
 			<div id="map" style="width:300px;height:300px;margin-top:10px;display:none"></div>
