[나현주] Boardwrite 생성

--- a/lms/src/main/resources/templates/PI/Board/PIBoard.html
+++ b/lms/src/main/resources/templates/PI/Board/PIBoard.html
@@ -13,6 +13,7 @@
 </th:block>
 <div layout:fragment="content">
 	<h1>커뮤니티</h1>
+	<div><button type="button" class="btn btn-outline-info" onclick="location.href='/Boardwrite'">글쓰기</button></div><br>
 	<table class="table table-hover">
 		<thead>
 			<tr>
