--- a/lms/src/main/resources/templates/PI/Board/PIQnA.html
+++ b/lms/src/main/resources/templates/PI/Board/PIQnA.html
@@ -7,7 +7,7 @@
 <!-- index.html 고유 CSS 추가 -->
 <th:block layout:fragment="css">
 <style>
-	.btn-write {
+	.btn {
 	float: right;
 	}
 </style>
@@ -18,7 +18,7 @@
 </th:block>
 <div layout:fragment="content">
 	<h1>Q&A</h1>
-	<div class="btn-write"><button type="button" class="btn btn-outline-info">글쓰기</button></div><br>
+	<div><button type="button" class="btn btn-outline-info">글쓰기</button></div><br>
 	<table class="table table-hover">
 		<thead>
 			<tr>
