[나현주] 게시판 화면경로 완성(insert/list 처리 전)/평가개요 시작

--- a/lms/src/main/resources/templates/association/associationIndex.html
+++ b/lms/src/main/resources/templates/association/associationIndex.html
@@ -70,9 +70,11 @@
 		<li><a href="/sendAdmin">직원 승인코드 전송</a></li>
 	</ul>
 	
-	<h3>교육원 평가 관리</h3>
+	<h3>평가 관리</h3>
 	<ul>
-		<li><a href="/association/evaluation/evaluationTotal">#교육원 평가 관리</a></li>
+		<li><a href="/lookup">평가조회</a></li>
+		<li><a href="/itemManagement">평가항목관리</a></li>
+		<!-- <li><a href="/association/evaluation/evaluationTotal">#교육원 평가 관리</a></li> -->
 	</ul>
 
 </div>
