--- a/lms/src/main/resources/templates/PI/Board/PIFAQ.html
+++ b/lms/src/main/resources/templates/PI/Board/PIFAQ.html
@@ -6,27 +6,43 @@
 <title>FAQ</title>
 <!-- index.html 고유 CSS 추가 -->
 <th:block layout:fragment="css">
+<style>
+	.btn {
+	float: right;
+	}
+</style>
 </th:block>
 
 <!-- index.html 고유 스크립트 추가 -->
 <th:block layout:fragment="script">
 </th:block>
 <div layout:fragment="content">
-	<h1>FAQ</h1>
-	<table class="table table-hover">
-		<thead>
-			<tr>
-				<th scope="col">제목</th>
-				<th scope="col">글쓴이</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr th:each="faq:${faqList}">
-				<!-- <input type="hidden" value="${member.memberCode}"> -->
-				<!-- <input type="hidden" value="${member.memberCode}"> -->
-				<th scope="row" th:text="${faq.boardTitle}"></th>
-				<td th:text="${faq.memberName}"></td>
-		</tbody>
-	</table>
+<p style="height: 50px"></p>
+	<div class="row">
+		<div class="col-sm-1"></div>
+		<div class="col-sm-10">
+			<h1>FAQ</h1>
+			<div>
+				<button th:if="${session.memberRank=='교육원직원'||session.memberRank=='협회직원'}" type="button" id="btn-write" class="btn btn-outline-info" th:onclick="|location.href='@{/PIFaqWrite(institutionCode=${institutionCode})}'|">글쓰기</button><br>
+			</div>
+			<table class="table table-hover">
+				<thead>
+					<tr>
+						<th scope="col">제목</th>
+						<th scope="col">글쓴이</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr th:each="faq:${faqList}">
+						<!-- <input type="hidden" value="${member.memberCode}"> -->
+						<!-- <input type="hidden" value="${member.memberCode}"> -->
+						<th scope="row" th:text="${faq.boardTitle}"></th>
+						<td th:text="${faq.memberName}"></td>
+				</tbody>
+			</table>
+		</div>
+		<div class="col-sm-1"></div>
+	</div>
+<p style="height: 300px"></p>
 </div>
 </html>
