--- a/lms/src/main/resources/templates/fragments/associationTop.html
+++ b/lms/src/main/resources/templates/fragments/associationTop.html
@@ -8,18 +8,21 @@
 	        <p></p>
 	        <ul th:if="${session.memberName == null}" class="navbar-nav mr-right">
 	            <li class="nav-item">
-	                <a class="nav-link" href="/associationLogin">로그인</a>
+	                <a style="font-size: 12px" class="nav-link" href="/associationLogin">로그인</a>
 	            </li>
 	            <li class="nav-item">
-	                <a class="nav-link" href="/join">회원가입</a>
+	                <a style="font-size: 12px" class="nav-link" href="/join">회원가입</a>
 	            </li>
 	        </ul>
 	        <ul th:if="${session.memberName != null}" class="navbar-nav mr-right">
 	            <li class="nav-item">
-	                <a class="nav-link" th:text="${session.memberName}">님 로그인중</a>
+	                <a style="font-size: 12px" class="nav-link" th:text="${session.memberRank}"></a>
 	            </li>
 	            <li class="nav-item">
-	                <a class="nav-link" href="/associationLogout">로그아웃</a>
+	                <a style="font-size: 12px" class="nav-link" th:text="${session.memberName}+'님'"></a>
+	            </li>
+	            <li class="nav-item">
+	                <a style="font-size: 12px" class="nav-link" href="/associationLogout">로그아웃</a>
 	            </li>
 	            <li class="nav-item">
 	                <a class="nav-link" href="#">내정보</a>
