--- a/lms/src/main/resources/templates/association/lecture/noticeLectureList.html
+++ b/lms/src/main/resources/templates/association/lecture/noticeLectureList.html
@@ -13,6 +13,33 @@
 
 <div layout:fragment="content">
 	<h1>강의공고 목록</h1>
-	
+	<table class="table table-striped">
+		<thead>
+			<tr>
+				<th>강의공고명</th>
+				<th>강사</th>
+				<th>교육원</th>
+				<th>최소인원</th>
+				<th>강의료</th>
+				<th>모집 시작일</th>
+				<th>모집마감일</th>				
+				<th>강의 시작일</th>
+				<th>강의 마감일</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr th:each="list:${noticeLectureList}">
+				<td><a th:href="@{'/association/lecture/detailNoticeLecture?noticeLectureCode='+${list.noticeLectureCode}}" th:text="${list.noticeLectureTitle}" th:value="${list.noticeLectureCode}"></a></td>
+				<td th:text="${list.memberTeacherName}" th:value="${list.memberTeacherName}"></td>
+				<td th:text="${list.institutionName}" th:value="${list.institutionName}"></td>
+				<td th:text="${list.noticeLectureMinimumNo}" th:value="${list.noticeLectureMinimumNo}"></td>
+				<td th:text="${list.noticeLectureFee}" th:value="${list.noticeLectureFee}"></td>
+				<td th:text="${list.noticeLectureRecruitmentStartDate}" th:value="${list.noticeLectureRecruitmentStartDate}"></td>
+				<td th:text="${list.noticeLectureRecruitmentEndDate}" th:value="${list.noticeLectureRecruitmentEndDate}"></td>
+				<td th:text="${list.noticeLectureStartDate}" th:value="${list.noticeLectureStartDate}"></td>
+				<td th:text="${list.noticeLectureEndDate}" th:value="${list.noticeLectureEndDate}"></td>				
+			</tr>
+		</tbody>
+	</table>
 </div>
 </html>
