[한병권] PK 변경으로 인한 로그인 수정 완료

--- a/lms/src/main/resources/templates/fragments/associationTop.html
+++ b/lms/src/main/resources/templates/fragments/associationTop.html
@@ -19,7 +19,7 @@
 	                <a style="font-size: 12px" class="nav-link" th:text="${session.memberRank}"></a>
 	            </li>
 	            <li class="nav-item">
-	                <a style="font-size: 12px" class="nav-link" th:text="${session.memberName}+'님'"></a>
+	                <a style="font-size: 12px; font-weight: bold" class="nav-link" th:text="${session.memberName}+'님'"></a>
 	            </li>
 	            <li class="nav-item">
 	                <a style="font-size: 12px" class="nav-link" href="/associationLogout">로그아웃</a>
