--- a/lms/src/main/resources/templates/fragments/teacherTop.html
+++ b/lms/src/main/resources/templates/fragments/teacherTop.html
@@ -16,7 +16,7 @@
 	        </ul>
 	        <ul th:if="${session.memberName != null}" class="navbar-nav mr-right">
 	            <li class="nav-item">
-	                <a class="nav-link" th:text="${session.memberName}">님 로그인중</a>
+	                <a style="font-size: 12px; font-weight: bold" class="nav-link" th:text="${session.memberName}+'님'"></a>
 	            </li>
 	            <li class="nav-item">
 	                <a class="nav-link" href="/teacherLogout">로그아웃</a>
