--- a/lms/src/main/resources/templates/rootIndex.html
+++ b/lms/src/main/resources/templates/rootIndex.html
@@ -23,16 +23,16 @@
 		<br>
 		<h4>협회 바로가기</h4>
 		<div class="btn-group btn-group-lg">
-			<a type="button" href="/PAIndex?institutionCode=I0" class="btn btn-primary">평생교육지원협회</a>
+			<a type="button" href="/PAIndex?institutionCode=I20120101000000" class="btn btn-primary">평생교육지원협회</a>
 		</div>
 		<br>
 		<br>
 		<h4>교육원 바로가기</h4>
 		<p>수강생들이 사용하는 페이지</p>
 		<div class="btn-group btn-group-lg">
-			<a type="button" href="/PIIndex?institutionCode=I1" class="btn btn-primary">전주평생교육원</a>
-			<a type="button" href="/PIIndex?institutionCode=I2" class="btn btn-primary">서울평생교육원</a>
-			<a type="button" href="/PIIndex?institutionCode=I3" class="btn btn-primary">성남평생교육원</a>
+			<a type="button" href="/PIIndex?institutionCode=I20140101000000" class="btn btn-primary">전주평생교육원</a>
+			<a type="button" href="/PIIndex?institutionCode=I20140102000000" class="btn btn-primary">서울평생교육원</a>
+			<a type="button" href="/PIIndex?institutionCode=I20150103000000" class="btn btn-primary">성남평생교육원</a>
 		</div>
 		<br>
 		<br>
